# ai-native-playground

./: #ccusage.md  .env.example  .gitignore  .renderignore  DEPLOYMENT.md  EXAMPLES.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  UNIFIED_PLATFORM.md  build.sh  main.py  news_agents_demo.py  news_orchestrator.py  news_summary_1756135639.txt  pyproject.toml  render.yaml  requirements.txt  setup.py  summarizer_agent.py  test_main.py  todo.py  todos.json
scripts/: README.md  daily_digest.sh  student_profile_matcher.py  university_scholarship_finder.py
src/ai_native_playground/: __init__.py
src/ai_native_playground/education_platform/: __init__.py  app.py
src/ai_native_playground/education_platform/templates/: index.html
src/ai_native_playground/german_universities/: __init__.py  cli.py  scraper.py
src/ai_native_playground/german_universities/data/: german_universities.json
src/ai_native_playground/news_analyzer/: __init__.py  cli.py  news_agent.py  news_orchestrator.py
src/ai_native_playground/reddit_sentiment/: __init__.py  cli.py  main.py  reddit_client.py  sentiment_analyzer.py
src/ai_native_playground/reddit_sentiment/static/: script.js  style.css
src/ai_native_playground/reddit_sentiment/templates/: base.html  index.html  results.html
src/ai_native_playground/scholarships/: __init__.py  api.py  chat_cli.py  generate_scholarships.py  llm_chat.py  ml_model.py  recommend_cli.py
src/ai_native_playground/scholarships/data/: scholarship_recommendation_model.pkl  scholarships_4000_dataset.json
src/ai_native_playground/tests/: __init__.py
src/ai_native_playground/todo_app/: __init__.py  cli.py
src/ai_native_playground/universities/: __init__.py  api.py  chat_cli.py  cli.py  data_loader.py  generate_4000_data.py  generate_data.py  llm_chat.py  ml_model.py  recommend_cli.py
src/ai_native_playground/universities/data/: universities_1000_dataset.json  universities_4000_dataset.json  university_recommendation_model.pkl  university_recommendation_model_4k.pkl
src/ai_native_playground/weather_api/: __init__.py  cli.py
